# Merge

./: .gitignore  CONSOLIDATION_PLAN.md  IMPROVEMENT_ROADMAP.md  NEXT_FEATURES.md  README.md  TAVERN_SIMULATION_EVALUATION.md  benchmark_real_world.py  benchmark_scaling.py  requirements.txt  tavern_day_runner.py  tavern_incremental_day1.json  tavern_incremental_day2.json  tavern_incremental_day3.json  tavern_incremental_day4.json  tavern_incremental_day5.json  tavern_incremental_day6.json  tavern_incremental_day7.json  tavern_simulation.py  tavern_week_results.json  tavern_week_results.txt  test_advanced.py  test_advanced_council.py  test_all_features.py  test_baseline_problems.py  test_complex_integration.py  test_complex_scenarios.py  test_comprehensive.py  test_harness.py  test_knowledge_base.py  test_new_features.py  test_optimized_cache.py  test_personas.py  test_self_eval.py  test_streaming.py  test_training_data.py
club_harness/: __init__.py
club_harness/caching/: __init__.py  optimized_cache.py  semantic_cache.py
club_harness/cli/: __init__.py
club_harness/core/: __init__.py  agent.py  config.py  errors.py  loop_detection.py  types.py
club_harness/evaluation/: __init__.py  self_eval.py
club_harness/knowledge/: __init__.py  semantic_kb.py
club_harness/llm/: __init__.py  openrouter.py  router.py  streaming.py
club_harness/memory/: __init__.py  memory.py
club_harness/orchestration/: __init__.py  council.py
club_harness/personas/: __init__.py  generator.py
club_harness/planning/: __init__.py  goap.py
club_harness/tools/: __init__.py  (+1 more)
repos/LisaSimpson/: PROJECT_EXPANSION_IDEAS.md  README.md  pyproject.toml
repos/LisaSimpson/deliberative_agent/: __init__.py  actions.py  agent.py  core.py  execution.py  goals.py  memory.py  planning.py  verification.py
repos/LisaSimpson/tests/: __init__.py  test_agent.py  test_core.py  test_memory.py  test_planning.py
(+155 files in other folders)
